# wasmjs_demo

./: .gitignore  Cargo.toml  Makefile
script/: dist  obs.json  wasm.py
script/js/: init.js
src/: lib.rs
