[package]
name = "smalls"
version = "0.1.0"
authors = ["smalls smalls0098@gmail.com"]
description = "protect is a security frame"
readme = "README.md"
keywords = ["protect", "apple", "wasm", "android", "security"]
license = "MIT"
edition = "2021"
rust-version = "1.71"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
serde = { version = "1.0" }
serde-wasm-bindgen = { version = "0.6" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
debug = false
debug-assertions = false
opt-level = 3
lto = true #"fat", "thin" true
codegen-units = 1
incremental = false
overflow-checks = false
panic = 'abort'
rpath = false
strip = true